# image-consolidation

./: .gitignore  README.md  config.example.toml  config.toml  pyproject.toml
.claude/: settings.local.json
src/image_consolidation/: __init__.py  cli.py  config.py  db.py  deduplicator.py  exif_checker.py  exif_fixer.py  filename_parser.py  gallery.py  hasher.py  ingest.py  organizer.py  reporter.py  selector.py
tests/: test_filename_parser.py  test_ingest.py
